--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
 	"version": "0.1.0",
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "server.js",
+    "type": "module",
 	"scripts": {
 		"start": "node server.js",
-        "devStart": "nodemon server.js"
+		"devStart": "nodemon server.js"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
+		"mongoose": "^5.12.10",
 		"nodemon": "^2.0.7"
 	},
 	"repository": {
